small spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -756,6 +756,6 @@ form .cta_btn {
 
   form input,
   form textarea {
-    margin: 1% 0 5%;
+    margin: 2% 0 5%;
   }
 }
